--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,14 @@
+@font-face {
+  font-family: "Noto Sans";
+  src: url("fonts/NotoSans-Regular.ttf");
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Noto Sans", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
   background: #000;
 }
@@ -27,7 +32,11 @@ button {
 }
 
 .carousel {
-  max-width: 1280px;
+  max-width: 800px;
+}
+
+.slide {
+  background: transparent !important;
 }
 
 @tailwind base;
