--- a/styles/globals.css
+++ b/styles/globals.css
@@ -56,7 +56,7 @@
 
 @font-face {
   font-family: "Noto Sans";
-  src: url("fonts/NotoSans-Regular.ttf");
+  src: url("../fonts/NotoSans-Regular.ttf");
 }
 
 html,
