--- a/styles/globals.css
+++ b/styles/globals.css
@@ -68,7 +68,7 @@
   }
 
   .changelog figure {
-    @apply flex flex-col items-center my-4;
+    @apply flex flex-col items-start my-4;
   }
 
   .changelog figcaption {
