--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,8 +89,12 @@
     @apply flex flex-col items-start my-4;
   }
 
+  .changelog .figure-group figure {
+    @apply my-0;
+  }
+
   .changelog figcaption {
-    @apply my-4 max-w-96 text-gray-300 italic text-center;
+    @apply mt-2 max-w-96 text-gray-300 italic text-center;
   }
 
   .changelog code {
